# CleverGov-2022

./: README.md
custom_blockchain/blockchain/: Cargo.toml
custom_blockchain/blockchain/src/: block.rs  chain.rs  lib.rs
custom_blockchain/gov-blockchain/: Cargo.toml
custom_blockchain/gov-blockchain/src/: args.rs  main.rs  p2p.rs
custom_blockchain/web_server/: Cargo.toml
custom_blockchain/web_server/src/: args.rs  main.rs
offchain/: README.md  contracts  index.html  lib.js
offchain/abis/: GovService.js  Request.js  RequestFactory.js
onchain/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
onchain/contracts/: GovService.sol  Request.sol  RequestFactory.sol
onchain/scripts/: deploy_all.js  open_request.js
onchain/test/: FullFlow.js
web-app/: README.md  package-lock.json  package.json  server.js
web-app/public/: index.html
web-app/src/: index.css  index.js
web-app/src/assets/: index.js  lib.js
web-app/src/assets/abis/: Request.js  RequestFactory.js
web-app/src/components/dashboard/: AppLayout.js  Footer.js  Header.js  searchbar.js
web-app/src/components/dashboard/pages/: Home.js  ShowResults.js
