[package]
name = "gov-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.44.0", features = [ "tcp-tokio", "mdns" ] }
tokio = { version = "1.17.0", features = [ "io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time" ] }
futures = "0.3.21"
env_logger = "0.9.0"
anyhow = "1.0.57"
libp2p-tcp = "0.32.0"
chrono = "0.4"
sha2 = "0.10.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.10"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "3.1.12", features = [ "derive" ] }

blockchain = { path = "../blockchain" }
