[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
json = "0.12"
clap = { version = "3.1.12", features = [ "derive" ] }
tokio = { version = "1.17.0", features = [ "io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.57"

blockchain = { path = "../blockchain" }
